Version History
===============

Version 0.5.13 (Unreleased)
---------------------------
* Fix DeprecationWarnings on Django 3 related to unicode (#173, thanks @jannh)
* Applied black to the codebase and ignored W503
* Test Django 2.0 through 3.0 on Python 3.8, too (#171, thanks @devkral)
* tox: remove superfluous basepython statement (#172, thanks @devkral)
* i18n: add Persian (fa) language translation files (#190, thanks @mavenium)


Version 0.5.12
--------------
* Doc: Update url include line for Django (#164, thanks @jpic)
* Doc: Fixed a typo (#162, thanks @RubenGarcia)
* Initial fixes and test against Django 3.0 (#166, #165. Thanks @devkral)
* Don't open dictionnary file in binary mode (#167, thanks @grasshoppermouse)


Version 0.5.11
--------------
* Fix: CAPTCHA_TEST_MODE was broken. (#163, thanks @ohlr for reporting)


Version 0.5.10
--------------
* Test against Django 2.2a1
* Docs: Grammar correction (#160, thanks @DanAtShenTech)
* Fix: Add '+' to text replacement for audio support (#157, thanks @geirkairam)
* I18N: Added Swedish translation (#155, thanks @stefannorman)
* Docs: Provide an example of custom field template (#158, thanks @TheBuky)


Version 0.5.9
-------------
* Add missing Jinja2 templates in the pypi packages.


Version 0.5.8
-------------
* Add support for Jinja2 templates (Issue #145, PR #146, thanks @ziima)
* Cleanup, drop dependency on South (#141, #142 thanks @ziima)


Version 0.5.7
-------------
* Use templates for rendering of widgets (Issue #128, #134, PR #133, #139, thanks @ziima)
* Always defined audio context variable  (PR #132, thanks @ziima)
* Test against Django 2.1a
* Updated AJAX update docs (PR #140, thanks @CNmanyue)
* Fixed a typo in a variable name (PR #130, thanks @galeo)


Version 0.5.6
-------------
* Updated render method to adapt for Django 2.1 (PR #120, thanks @skozan)
* Improved compatibility with Django 2.0, tests against Django 2.0a1 (PR #121, thanks @Kondou-ger)
* Dropped support for PIL (use Pillow instead)