@@ -1,7 +1,7 @@
 [tox]
 envlist =
-        {py27,py36}-django{18,19,110,111},
-        py{36,37,38}-django{20,21,22,30},
+        py{36,37,38}-django{22,30},
+        py{37,38}-django31,
         py{36,37,38}-django22-jinja2,
         gettext,flake8,docs
 
@@ -14,17 +14,11 @@ setenv =
         PYTHONDONTWRITEBYTECODE=1
 
 deps =
-        django18: Django==1.8.*
-        django19: Django==1.9.*
-        django110: Django==1.10.*
-        django111: Django==1.11.*
-        django20: Django==2.0.*
-        django21: Django>=2.1a1,<=2.1.99
-        django22: Django>=2.2a1,<=2.2.99
-        django30: Django>=3.0a1,<=3.0.99
+        django22: Django>=2.2a1,<2.3
+        django30: Django>=3.0a1,<3.1
+        django31: Django>=3.1a1,<3.2
 
-        py27-django{18,19,110,111}: python-memcached
-        py{36,37,38}-django{18,19,110,111,20,21,22,30}: python3-memcached
+        py{36,37,38}-django{22,30,31}: python3-memcached
 extras =
         test
 
