@@ -5,9 +5,10 @@ Version 0.5.13 (Unreleased)
 ---------------------------
 * Fix DeprecationWarnings on Django 3 related to unicode (#173, thanks @jannh)
 * Applied black to the codebase and ignored W503
-* Test Django 2.0 through 3.0 on Python 3.8, too (#171, thanks @devkral)
 * tox: remove superfluous basepython statement (#172, thanks @devkral)
 * i18n: add Persian (fa) language translation files (#190, thanks @mavenium)
+* Test Django 2.2, 3.0 and 3.1 on Python 3.6, 3.7 and 3.8 (#171, thanks @devkral)
+* Fix deprecation warnings on Django 3.1 (#186, thanks @ jannh and @TheBuky)
 
 
 Version 0.5.12
